deployment/ingress_new.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hitrecord-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/acme-challenge-type: "http01"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - hitrecord.fahadahammed.com
    secretName: hitrecord-tls
  ingressClassName: nginx
  rules:
  - host: hitrecord.fahadahammed.com
    http:
      paths:
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: hit-record-api-v1-service
            port:
              number: 80
      - path: /api/v2
        pathType: Prefix
        backend:
          service:
            name: hit-record-api-v2-service
            port:
              number: 80
